--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,19 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 2015,
-        "sourceType": "module"
-    },
-    "rules": {
-        "linebreak-style": [
-            "off"
-        ],
-        "no-console": [
-            "off"
-        ]
-    },
-    "globals": {
-      "Handlebars": false
-    }
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 2015,
+    "sourceType": "module"
+  },
+  "rules": {
+    "linebreak-style": ["off"],
+    "no-console": ["off"],
+    "no-unused-vars": ["warn", { "varsIgnorePattern": "VARIABLE_NAME" }]
+  },
+  "globals": {
+    "Handlebars": false
+  }
 }
